--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       <header>
         <nav>
           <li><a href="#"><h1>Logo</h1></a></li>
-          <li><a href="#">Link</a></li>
+          <li><a href="#calendar">Calendar</a></li>
           <li><a href="#">Link</a></li>
         </nav>
         <button>Button</button>
@@ -22,6 +22,22 @@
         </section>
         <aside class="sidebar">
           <h3>Sidebar</h3>
+          <div id="calendar">
+            <header>
+              <h1></h1>
+            </header>
+            <div class="day-names">
+              <p>Mon</p>
+              <p>Tue</p>
+              <p>Wed</p>
+              <p>Thu</p>
+              <p>Fri</p>
+              <p>Sat</p>
+              <p>Sun</p>
+            </div>
+            <div class="days">
+            </div>
+          </div>
         </aside>
       </div>
       <footer>
