Style calendar with font-awesome icon

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       <header>
         <nav>
           <li><a href="#"><h1>Logo</h1></a></li>
-          <li><a href="#calendar">Calendar</a></li>
+          <li><a href="#">Calendar</a></li>
           <li><a href="#">Link</a></li>
         </nav>
         <button>Button</button>
@@ -24,7 +24,6 @@
           <h3>Sidebar</h3>
           <div id="calendar">
             <header>
-              <h1></h1>
             </header>
             <div class="day-names">
               <p>Mon</p>
