Add button to hide/show station-lines checkboxes inside sidebar when screensize <= MD

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="row">
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-sidebar">
         <div class="sidebar">
           <h2 class="title">NYC Subway Traffic</h2>
           <p>Entrance and exit traffic at each MTA station over time. <span class='dates'></span></p>
@@ -16,7 +16,7 @@
               <button id='toggle-lines' class='btn btn-default d-lg-none d-xl-none pull-left'>Select Lines</button>
             </fieldset>
           </form>
-          <div class='d-none d-lg-block'>
+          <div class='collapse-md d-none d-lg-block'>
             <hr/>
             <form id='subway-lines' >
               <fieldset>
